--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,8 @@
    </head>
    <body>
       <h1 id="target"></h1>
+      <div>
+         <img src="../assets/images/image1.svg" alt="">
+      </div>
    </body>
 </html>
