--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
    <body>
       <h1 id="target"></h1>
       <div>
-         <img src="../assets/images/image1.svg" alt="">
+         <img src="my.svg" alt="">
       </div>
    </body>
 </html>
